# Eng_agent_v2

./: .gitignore  AGENTS.md  STATE.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: auth.py  chapter_words.py  generation.py  story_projects.py  vocabularies.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/domain/: __init__.py  enums.py
apps/api/app/domain/auth/: repository.py  service.py
apps/api/app/domain/generation/: repository.py  service.py  tasks.py
apps/api/app/domain/generation/graphs/: chapter_generation.py
apps/api/app/domain/review/: base.py
apps/api/app/domain/review/rules/: continuity.py  (+3 more)
apps/api/app/domain/story/: continuity.py  repository.py  service.py
apps/api/app/domain/vocabulary/: repository.py  service.py
apps/api/app/integrations/llm/: base.py  dashscope_provider.py  fake_provider.py  prompts.py
apps/api/app/models/: auth.py  generation.py  progress.py  story.py  vocabulary.py
apps/api/app/schemas/: auth.py  generation.py  progress.py  story.py  vocabulary.py
apps/api/tests/: conftest.py  test_auth_flow.py  test_dashscope_provider.py  test_generation_api.py  test_generation_graph.py  test_generation_tasks.py  test_health.py  test_kaoyan_syllabus_import.py  test_llm_provider.py  test_models_schema.py  test_review_rules.py  test_schemas.py  test_story_continuity.py  test_story_project_rules.py  test_target_words.py
(+56 files in other folders)
