[project]
name = "vocabulary-story-learning-api"
version = "0.1.0"
description = "FastAPI backend for vocabulary story learning."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "SQLAlchemy>=2,<3",
  "alembic>=1.13,<2",
  "celery[redis]>=5.4,<6",
  "langgraph>=1.0.10,<2.0",
  "langgraph-checkpoint>=4.0.0,<5.0",
  "psycopg[binary]>=3,<4",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
